crates/nyx-compiler/tests/snapshots/test_let_statement__integer_multiplication_overflow_is_not_constant_folded.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(\"let result = 9223372036854775807 * 2;\")"
---
Constants:
   0  Int(9223372036854775807)
   1  Int(2)

Globals:
   0  result

Bytecode:
   0  LOAD_CONSTANT          0  (Int(9223372036854775807))
   3  LOAD_CONSTANT          1  (Int(2))
   6  BINARY                 2  (MUL)
   8  DEFINE_GLOBAL          0  (result)
